Fix image's alts and move carousel styles to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 title: Mathematikos
 description: "Matematika je abeceda, ktorou Boh napísal vesmír. Tieto slová sa pripisujú Galileovi a zatiaľ všetko naznačuje, že sú pravdivé. Matematika je naozaj nástroj, ktorým sa da popísať a predpovedať svet okolo nás."
 ---
+<link rel="stylesheet" type="text/css" href="assets/css/carusel_styles.css">
+
 <div class="page">
 <div class="slideshow-container">
 
