--- a/pages/aGeom_relativePosLinePlane.html
+++ b/pages/aGeom_relativePosLinePlane.html
@@ -33,17 +33,17 @@ Po dosadení rovnice priamky do rovnice roviny, budeme mať jednu neznámu - par
 Vyskúšame si to na príklade:
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample.png" alt="Zadanie roviny a troch priamok">
   <figcaption>Obr. 2. Na obrázku je nakreslená rovina a tri priamky. K rovine poznáme všeobecnú rovnicu, a k priamkam máme body a ich smerové vektory. Chceme nejako zistiť ich vzájomnú polohu. Z obrázku sa veľa nedozvieme, tak musíme ísť počítať.</figcaption>
 </figure>
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample1.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample1.png" alt="Príklad - priamka patrí rovine">
   <figcaption>Obr. 3. Chceme zistiť aká je vzájomná poloha priamky a roviny. Potrebujeme na to všeobecnú rovnicu roviny a parametrickú rovnicu priamky. Súradnice vyjadrené parametrickou rovnicou priamky dosadíme za súradnice do všeobecnej rovnice roviny a spočítame.</figcaption>
 </figure>
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample2.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample2.png" alt="Dva príklady. Prvý - priamka a rovina sú rôznobežné. Druhý - priamka a rovina sú rovnobežné.">
   <figcaption>Obr. 4. Ďalšie dva príklady na vzájomnú polohu priamky a roviny. Postup počítania je stále rovnaký. Zoberieme súradnice bodu vyjadrené pomocou parametrickej rovnice priamky a dosadíme ich za súradnice bodu vo všeobecnej rovnici roviny.</figcaption>
 </figure>
 
