--- a/pages/aGeom_relativePosPlanes.html
+++ b/pages/aGeom_relativePosPlanes.html
@@ -34,14 +34,14 @@ Pri rovnobežných rovinách nám zasa vypadnú všetky premenné, ale na každe
 
 Ostali nám roviny rôznobežné. Pri nich nevypadnú premenné, ale vieme ich vyjadriť. Môže sa zdať, že tu máme problém, lebo máme dve rovnice a tri neznáme. Čiže dve premenné musíme vyjadriť pomocou tej tretej. To je to, čo práve chceme, pretože dostaneme parametrickú rovnicu priamky a ešte na začiatku sme si povedali, že prienikom dvoch rovín je priamka.
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_posPlanePlaneExample1.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posPlanePlaneExample1.png" alt="Príklad - roviny sú rôznobežné">
   <figcaption>Obr. 2. Máme všeobecné rovnice dvoch priamok. Dáme ich do sústavy a snažíme sa vyjadriť <i>y</i>. To sa aj podarilo, <i>y</i> vyšlo, že <i>y = -9 -17z</i>. Dosadíme to za <i>x</i> a dostaneme, že <i>x = -13 -26z</i>. Ešte to tam kazí <i>z</i> až do chvíle, kým si uvedomíš, že <i>z</i> môžeme použiť ako parameter.</figcaption>
 </figure>
 
 Ešte si vypočítame dve sústavy rovníc.
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_posPlanePlaneExample2.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posPlanePlaneExample2.png" alt="Dva príklady. Prvý - roviny sú totožné. Druhý - roviny sú rovnobežné.">
   <figcaption>Obr. 3. V prvej sústave nám vypadli všetky premennú dostali sme <i>0 = 0</i>. To je prípad, kedy sú roviny totožné. V druhej sústave zasa vypadli všetky premenné, ale výsledok je <i>-2 = 0</i>. Znamená to, že roviny sú rovnobežné.</figcaption>
 </figure>
 
