--- a/pages/aGeom_usageCG.html
+++ b/pages/aGeom_usageCG.html
@@ -50,7 +50,7 @@ Pomocou nej dokážeme všetky objekty zapísať pomocou čísiel. Ukážeme ti 
 V realite to funguje tak, že grafik vytvorí v programe (napr. Blender) objekt. Povrch objektu sa skladá z veľmi veľa bodov, ktoré sú pospájané do trojuholníčkov. Program vygeneruje textový súbor, kde sú napísané súradnice všetkých bodov a je tam aj napísané to, ktoré body majú byť spojené. Iný program (v ktorom sa robí hra) tento súbor prečíta a objekt zobrazí.
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeom_bedObj.png" alt="Zobrazenie postele pomocou bodov v karteziánskej súradnicovej sústave">
+  <img loading="lazy" src="assets/images/aGeom_bedObj.png" alt="Posteľ pre babičku vytvorená ako objekt počítačovej grafiky">
   <figcaption>Obr. 3.: a) umelec vytvoril posteľ pre babičku. b) posteľ sa skladá z veľmi veľa bodov, ktoré sú pospájané do trojuholníkov. Táto "sieť" nie je normálne vidieť (viď obrázok a), ale dá sa zobraziť. c) súradnice bodov sú zapísané v textovom súbore. Na obrázku nie sú všetky, lebo ich je veľmi veľa. V súbore je zapísané aj to, ktoré body majú byť spojené. Programy vedia tento súbor prečítať a potom podľa neho zobraziť objekt.</figcaption>
 </figure>
 
