--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -167,7 +167,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 
 
 <figure>
-  <img loading="lazy" id="tonesSlideShow" src="assets/images/gonio_graphToneA.png" onclick="changeTonesImages()" alt="Ľudský hlas opísaný sínusom.">
+  <img loading="lazy" id="tonesSlideShow" src="assets/images/gonio_graphToneA.png" onclick="changeTonesImages()" alt="Viacero obrázkov - tóny A4 a A3">
   <figcaption>Obr. 5.: Galéria grafov k spomínaným tónom. Klikaním na obrázok si ich vieš prezerať.</figcaption>
 </figure>
 
