--- a/pages/num_numberSets.html
+++ b/pages/num_numberSets.html
@@ -35,7 +35,7 @@ Neskôr, keď už začali žiť vo väčších spoločenstvách museli začať r
 Staroveký Egypt bola asi najrozvinutejšia civilizácia, aká dovtedy existovala. Obchodovali s cudzinou, stavali úžasné stavby, zaujímali sa o medicínu a astronómiu. So všetkými týmito činnosťami určite prišla potreba niečo rozdeliť na časti. Dôkazom toho je papyrus [4], kde je zaznamenané prvé použitie delenia na svete. <b>Pri delení už nestačia celé čísla</b>, lebo niečo môžeš rozdeliť na polovicu, na tretiny, štvrtiny atď. Odteraz už ľudia budú môcť používať desatinné čísla.
 
 <figure>
-  <img loading="lazy" src="assets/images/numSets_IshangoRhind.png" alt="Číselné množiny">
+  <img loading="lazy" src="assets/images/numSets_IshangoRhind.png" alt="Kosť Ishango a Rhind papyrus.">
   <figcaption>Obr. 2.: Hore je kosť Ishango, na ktorej je zachytené prvé ľudské počítanie. Dole je papyrus, kde je prvý raz použité delenie a racionálne čísla.</figcaption>
 </figure>
 
