--- a/pages/stat_playerAnalysis.html
+++ b/pages/stat_playerAnalysis.html
@@ -124,7 +124,7 @@ Aby si vedel, že do štatistiky patria aj grafy, tak sme ich zopár spravili pr
 </figure>
 
 <figure>
-  <img loading="lazy" src="assets/images/stat_scatterGraph.png" alt="Korelácia medzi schopnosťou strieľať a ">
+  <img loading="lazy" src="assets/images/stat_scatterGraph.png" alt="Korelácia medzi schopnosťou strieľať a brániť">
   <figcaption>Obr. 5.: Tento graf zobrazuje závislosť medzi schopnosťou strieľať a brániť. Hráči, ktorí majú vysoký počet bodov pre bránenie, majú nízky počet bodov pre strieľanie a naopak. Môžeme usúdiť, že čím lepší obranca, tým horšie strieľa.</figcaption>
 </figure>
 
