--- a/pages/aGeom_todayCG2020.html
+++ b/pages/aGeom_todayCG2020.html
@@ -66,7 +66,7 @@ Textil zasa nemôžeme obaliť trojuholníčkami. Chceme, aby sa hýbal. Chceme,
 Textílie vieme zobraziť tromi spôsobmi. Prvý je geometrický. Je to najjednoduchší spôsob a používal sa už dávno. Je rovnaký ako pevné telesá. Látku vymodeluje grafik v nejakom programe. Lenže takáto handrička je ako pevné teleso. Nemá žiadne fyzikálne vlastnosti textilu a nevie sa nijako hýbať, krčiť, viať. Iba stojí. Druhý spôsob je fyzikálny. Vedci sa pozrú na vlastnosti materiálu (napr. ako sa dá natiahnuť, či je tenký, hrubý, dá sa ľahko ohnúť alebo je to naškrobená košeľa). Podobne ako Navier so Stokom, spravia nejaké rovnice. Tie sa potom použijú na to, aby sa vedelo, ako sa má textil správať. Fyzikálny spôsob je veľmi náročný na výpočty a dlho trvá, kým sa napríklad správne nasimuluje celý pád uteráku na zem. Preto sa niekedy používa hybridný model. Tam grafici spravia nejaké základné tvary uteráka a zvyšok sa dopočíta. [3]
 
 <figure>
-  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayTextile.gif" alt="SIGGRAPH 2017:">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayTextile.gif" alt="SIGGRAPH 2017: textil">
   <figcaption>Obr. 6: SIGGRAPH 2017: textil <a href="https://www.youtube.com/watch?v=eGtB0VXJsuI&t=27s&ab_channel=ChenfanfuJiang" target="_blank">[12]</a></figcaption>
 </figure>
 
