--- a/pages/geom_line.html
+++ b/pages/geom_line.html
@@ -16,7 +16,7 @@ Každé dva body, ktoré si vyberieme, sa dajú spojiť jednou priamkou. Je to n
 <h2>Vzájomná poloha priamok</h2>
 Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné priamky sa nikde nepretnú. Z toho vyplýva, že nemajú žiaden bod spoločný. Rôznobežné priamky idú každá iným smerom a niekde sa pretnú v jednom bode. Majú teda spoločný iba jeden bod. Totožné priamky ležia na sebe a kvôli tomu majú všetky body spoločné.
 <figure>
-  <img src="assets/images/geom_lineParallelism.png" alt="Optická ilúzia Cafe wall">
+  <img src="assets/images/geom_lineParallelism.png" alt="Vzájomná poloha priamok">
   <figcaption>Obr. 1.: Rovnobežnosť priamok. Na prvom obrázku <i>a)</i> sú rovnobežné priamky. Ani jeden bod nemajú spoločný. Na obrázku <i>b)</i> sú všetky štyri priamky rôznobežné. U nás na papieri sa síce nepretínajú, ale keďže sú nekonečne dlhé, tak sa niekde pretnú určite. Totožné priamky sú na obrázku <i>c)</i>. Majú všetky body rovnaké.</figcaption>
 </figure>
 
